Corrigindo header de login para ter responsividade

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,11 +1,13 @@
 {
-  "development": {
-    "api_url": "http://localhost:4000/api"
-  },
-  "hml": {
-    "api_url": ""
-  },
-  "prod": {
-    "api_url": ""
+  "ambientes": {
+    "development": {
+      "api_url": "http://localhost:4000/api"
+    },
+    "hml": {
+      "api_url": ""
+    },
+    "prod": {
+      "api_url": ""
+    }
   }
 }
